Let there be hue